fix: :bug: increase header and logo heights for improved visibility and layout consistency

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -70,7 +70,7 @@
     position: fixed;
     top: 18px;
     display: flex;
-    min-height: 40px;
+    min-height: 56px;
     justify-content: space-between;
     align-items: center;
     padding: 0px 0px;
@@ -81,7 +81,7 @@
 
     &__logo-container {
         @include mix.flex-center;
-        height: 44px;
+        height: 56px;
         border-right: var.$primary-color 1px solid;
         flex: 1;
         padding-left: 15px;
@@ -114,7 +114,7 @@
         li a {
             text-decoration: none;
             color: var.$primary-color;
-            font-size: 22px;
+            font-size: 2.5dvh;
             font-weight: 500;
             text-transform: uppercase;
             text-align: left;
@@ -191,7 +191,7 @@
         @include mix.flex-center;
         position: relative;
         border-left: var.$primary-color 1px solid;
-        height: 44px;
+        height: 56px;
         padding: 5px 15px;
     }
 
